tests/baselines/reference/pathMappingBasedModuleResolution_withExtension_failedLookup.errors.txt
/a.ts(1,21): error TS2792: Cannot find module 'foo'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== /tsconfig.json (0 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            "paths": {
                "foo": ["foo/foo.ts"]
            }
        }
    }
    
==== /a.ts (1 errors) ====
    import { foo } from "foo";
                        ~~~~~
!!! error TS2792: Cannot find module 'foo'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    